# pv281-rust

./: README.md
Remote desktop linux/: .env  .gitignore  .gitlab-ci.yml  README.md  flake.nix
Remote desktop linux/.cargo-husky/hooks/: commit-msg
Remote desktop linux/gui/src-tauri/: Cargo.toml  tauri.conf.json
Remote desktop linux/gui/src-tauri/templates/: client_list.html  master.html  slave.html
Remote desktop linux/gui/ui/: index.html
Remote desktop linux/master/src/: main.rs
Remote desktop linux/scripts/: detect-peripherals.sh
Remote desktop linux/shared/driver/: Cargo.toml
Remote desktop linux/shared/driver/src/: device_type.rs  event.rs  file.rs  reader.rs  stream.rs
Remote desktop linux/shared/driver/tests/: test.rs
Remote desktop linux/shared/middleware/src/: file_transfer.rs
Remote desktop linux/shared/protocol/src/: config.rs  error.rs  serialization.rs
Remote desktop linux/shared/protocol/src/quic/: quic_single_socket.rs  quic_stream.rs
Remote desktop linux/slave/src/: main.rs
remote_desktop_linux/: Cargo.toml  README.md
remote_desktop_linux/.cargo-husky/hooks/: pre-commit
remote_desktop_linux/agents/: frontend_mentor.md  rust_mentor.md
remote_desktop_linux/gui/src-tauri/capabilities/: default.json
remote_desktop_linux/gui/src-tauri/src/: driver_loop.rs  lib.rs  main.rs  master_service.rs  slave_service.rs  status.rs  ui_server.rs
remote_desktop_linux/gui/src-tauri/templates/: index.html  layout.html
remote_desktop_linux/master/: Cargo.toml
remote_desktop_linux/scripts/: setup.sh
remote_desktop_linux/shared/driver/src/: driver.rs  lib.rs  writer.rs
remote_desktop_linux/shared/middleware/: Cargo.toml
remote_desktop_linux/shared/middleware/src/: command.rs  event.rs  lib.rs
remote_desktop_linux/shared/middleware/tests/: transport_tests.rs
remote_desktop_linux/shared/protocol/: Cargo.toml  protocol.md
remote_desktop_linux/shared/protocol/src/: lib.rs  packet.rs  stream.rs  transport.rs
remote_desktop_linux/shared/protocol/src/quic/: mod.rs
remote_desktop_linux/shared/protocol/src/tcp/: mod.rs  tcp_stream.rs
remote_desktop_linux/shared/protocol/tests/: packet_tests.rs  serialization_tests.rs
remote_desktop_linux/slave/: Cargo.toml
remote_desktop_linux/tests/: integration_test.rs
rust_mini_projects/: .gitignore  .gitlab-ci.yml  GEMINI.md  README.md
rust_mini_projects/iteration-01/: Cargo.toml  README.md
rust_mini_projects/iteration-01/src/: command.rs  helpers.rs  main.rs
rust_mini_projects/iteration-01/tests/files/zipffucks/: cell_size.zf  hello.zf  square.zf  test.zf
rust_mini_projects/iteration-02/: .gitignore  Cargo.toml  README.md
rust_mini_projects/iteration-02/src/parsing/: data_access.rs
rust_mini_projects/iteration-02/src/parsing/datasets/: mod.rs
rust_mini_projects/iteration-02/src/parsing/datasets/lamps/: mod.rs
rust_mini_projects/iteration-02/src/parsing/datasets/traffic_accident/structs/: overview.rs  pedestrian.rs  vehicle.rs  vehicle_occupant.rs
rust_mini_projects/iteration-02/src/tasks/: bonus.rs  mod.rs  task_01_night_times.rs  task_02_unfavorable_accident.rs  task_03_unbuckled_trend.rs  task_04_extreme_accidents.rs  task_05_missing_units.rs
rust_mini_projects/iteration-02/tests/: bonus.rs  integration.rs
rust_mini_projects/iteration-03/: Cargo.toml  README.md
rust_mini_projects/iteration-03/src/: car.rs  lib.rs  main.rs  race.rs  track.rs
rust_mini_projects/iteration-03/src/utils/: analytics.rs  mod.rs  ordered_map.rs
rust_mini_projects/iteration-03/tests/: with_safety_car.rs  without_safety_car.rs
rust_mini_projects/iteration-04/: .gitignore  Cargo.toml  README.md  compose.yml  erd.puml
rust_mini_projects/iteration-04/migrations/: 20231017202134_initial-migration.down.sql  20231017202134_initial-migration.up.sql
rust_mini_projects/iteration-04/src/: lib.rs
rust_mini_projects/iteration-04/src/common/: error.rs  repository.rs  run_migration.rs
rust_mini_projects/iteration-04/src/models/: comment.rs  mod.rs  post.rs  user.rs
rust_mini_projects/iteration-04/src/repositories/: comment.rs  post.rs  user.rs
rust_mini_projects/iteration-04/tests/: custom_tests.rs  tests.rs
rust_mini_projects/iteration-04/tests/fixtures/: posts.sql  users.sql
rust_mini_projects/iteration-05/: .gitignore  Cargo.toml  README.md
rust_mini_projects/iteration-05/db/migrations/: 20230824190431_init.up.sql
rust_mini_projects/iteration-05/src/: main.rs  repository.rs  templates.rs
rust_mini_projects/iteration-05/src/static/css/: main.css
rust_mini_projects/iteration-05/templates/: hello.html  index.html  todo_list.html
