[workspace]
resolver = "3"
members = [
    "shared/protocol",
    "shared/driver",
    "master",
    "slave",
    "gui/src-tauri",
    "shared/middleware",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bincode2 = "2.0.1"
base64 = "0.22.1"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.5.51", features = ["derive"] }

# System
hostname = "0.4.2"

# Linux input (target-specific)
evdev = { version = "0.13.2", features = ["tokio", "serde"] }
