[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tokio = { workspace = true }
kmf-middleware = { path = "../../shared/middleware" }
kmf-protocol = { path = "../../shared/protocol" }
kmf-driver = { path = "../../shared/driver" }
anyhow = { workspace = true }
tauri-plugin-shell = "2.3.3"
axum = { version = "0.7", features = ["macros", "multipart"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
hostname = { workspace = true }
dotenvy = "0.15.7"


[target.'cfg(target_os = "linux")'.dependencies]
evdev = { workspace = true }
