[package]
name = "kmf-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
kmf-protocol = { path = "../protocol" }
kmf-driver = { path = "../driver" }
bincode2 = { workspace = true }
tokio = { workspace = true }
hostname = { workspace = true }
