[package]
name = "kmf-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bincode2 = { workspace = true }
dotenvy = "0.15"
async-trait = "0.1"
quinn = "0.11.9"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-platform-verifier = "0.6"
rustls-pki-types = "1.7"
rcgen = "0.14"

rmp-serde = "1.1"

[dev-dependencies]
serial_test = "0.5"
